Alteração do titulo principal.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1><strong>Exercício de Display</strong></h1>
+    <h1><strong>Exercício de Fixação</strong></h1>
 
     <div class="item">
         <h2><span>Carro:</span> R$ 89.990,00 </h2>
